# LangChain_LINE-bot_sample

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: server.py
rag/: __init__.py  rag_chain.py
